# FalcomPlot

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
js/: index.html  main.js  old.html  package-lock.json  package.json  vite.config.js
js/js/: animationController.js  dataLoader.js  inputHandler.js  renderer.js  viewManager.js
js/old/: README.md  animation.js  graphRenderer.js  infoBox.js  main.js  style.css
src/falcomplot/: __init__.py  server.py
src/falcomplot/web_assets/: index.html
src/falcomplot/web_assets/assets/: main-De2OcqdI.js
