[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "falcomplot"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A visualization tool for ReCom districts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kirtisoglu/FalcomPlot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
falcomplot = ["web_assets/**/*"]
